add switch functionality to alter between xs and os.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 
       <h2><span id="player1header">Player 1's turn!</span><span id="player2header">Player 2's turn!</span></h2>
 
+      <button type="button" class="btn btn-success" name="start" id="start">Start Game!</button>
+
       <div class="board">
         <div class="row-1">
           <div id="s1" class="col-xs-4 box">
